--- a/src/pages/otp/otp.html
+++ b/src/pages/otp/otp.html
@@ -32,7 +32,7 @@
                         <ion-icon item-left ios="ios-lock" md="md-lock"></ion-icon>
 
                     </ion-label>
-                    <ion-input type="number" placeholder="Enter OTP" [(ngModel)]="otp" formControlName="otp"></ion-input>
+                    <ion-input type="number" placeholder="Enter login OTP" [(ngModel)]="otp" formControlName="otp"></ion-input>
                 </ion-item>
 
                 <!-- <ion-item>
@@ -68,7 +68,7 @@
                       <ion-icon item-left ios="ios-lock" md="md-lock"></ion-icon>
 
                   </ion-label>
-                  <ion-input type="number" placeholder="Enter OTP" ([ngModel])="otp" formControlName="otp"></ion-input>
+                  <ion-input type="number" placeholder="Enter signup OTP" ([ngModel])="otp" formControlName="otp"></ion-input>
               </ion-item>
 
               <!-- <ion-item>
