--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Posts" tabIcon="heart"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="News" tabIcon="paper"></ion-tab>
+<ion-tabs  id="tabs">
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Posts" tabIcon="heart"  enabled="{{tabsEnabled}}"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="News" tabIcon="paper"  enabled="{{tabsEnabled}}"></ion-tab>
 </ion-tabs>
